--- a/style.css
+++ b/style.css
@@ -15,6 +15,17 @@
   color: white;
 }
 
+#gallery {
+  background-color: #696969;
+}
+
 section {
   padding-top: 4rem;
+}
+
+.gallery-img {
+  width: 100%;
+}
+#gallery .row > * {
+  padding: 5px;
 }
